Fix button alignment (#37)
* Fix button align

* Update line-height for button

--- a/src/driver.scss
+++ b/src/driver.scss
@@ -86,6 +86,7 @@ div#driver-popover-item {
       border-radius: 2px;
       zoom: 1;
       margin: 10px 0 0;
+      line-height: 1.3;
     }
 
     button.driver-disabled {
